--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,25 +4,23 @@
 
 
     <Button
-        android:id="@+id/computeButton"
-        android:text="COMPUTE"
+        android:id="@+id/conv2Button"
+        android:text="CONV 2 Layer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="13dp"
-        android:onClick="onComputeClick" />
+        android:onClick="onConv2Click" />
 
-    <ToggleButton
-        android:id="@+id/nnapiToggle"
+    <Button
+        android:id="@+id/resnetButton"
+        android:text="Resnet 50 Layer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:checked="false"
-        android:layout_alignLeft="@id/computeButton"
+        android:layout_alignLeft="@id/conv2Button"
         android:layout_marginStart="140dp"
         android:layout_marginTop="13dp"
-        android:textOff="NNAPI Disabled"
-        android:textOn="NNAPI Enabled"
-        android:onClick="onNNApiClick"/>
+        android:onClick="onResnetClick"/>
 
 
     <TextView
@@ -31,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginStart="25dp"
-        android:layout_below="@+id/computeButton"
+        android:layout_below="@+id/conv2Button"
         android:layout_marginTop="20dp"
         android:textSize="20dp"/>
 
